--- a/mydir/myfirstapp/src/App.module.css
+++ b/mydir/myfirstapp/src/App.module.css
@@ -15,3 +15,19 @@
     padding: 26px 16px 0;
     background: #f0f0f0;
 }
+
+.datasetswrapper {
+    display:flex;
+}
+
+.datasetstable {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 50%;
+}
+
+.datasetsmenu {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 50%;
+}
